Closed
Bug 974430
Opened 11 years ago
Closed 11 years ago
Put the |input[type=number]| rule in forms.css into a separate sheet so we can make it respect to the dom.forms.number pref
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: jwatt, Assigned: jwatt)
References
Details
Attachments
(1 file)
8.59 KB,
patch
|
dbaron
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
We should put the |input[type=number]| rule in forms.css into a separate sheet so we can make it respect to the dom.forms.number pref. Ideally we'd solve the issue by fixing bug 677302, but that doesn't have agreement on the way to go and we need this for v29 (currently Aurora).
Assignee | ||
Updated•11 years ago
|
status-firefox29:
--- → affected
tracking-firefox29:
--- → ?
Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8378343 -
Flags: review?(dbaron)
Comment 2•11 years ago
|
||
Why not move all of those rules to number-control.css? That makes it easier to find them all in the same place.
Assignee | ||
Comment 3•11 years ago
|
||
Because this is a workaround for the lack of a fix for bug 677302 that I hope to revert sooner rather than later. Besides that no point messing up blame, or causing confusion about what _needs_ to be in this other sheet.
Comment 4•11 years ago
|
||
Alright, fair enough!
Updated•11 years ago
|
Comment on attachment 8378343 [details] [diff] [review]
patch
nsDocumentViewer.cpp:
Don't you want to put the code before the code for FormsSheet, so that
it ends up after FormsSheet in the cascade?
(I suppose technically there's no difference, but it seems better that
way.)
jar.mn:
>+* res/number-control.css (number-control.css)
No need to preprocess the file (i.e., remove the "*").
nsLayoutStylesheetCache.h:
>+ static nsCSSStyleSheet* NumberControlSheet();
Please comment that this is expected to return null when the number
control is disabled.
r=dbaron with that
Attachment #8378343 -
Flags: review?(dbaron) → review+
Assignee | ||
Comment 6•11 years ago
|
||
Assignee | ||
Comment 7•11 years ago
|
||
Comment on attachment 8378343 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 344616
User impact if declined: risk of number related issues/crashes like bug 973344
Testing completed (on m-c, etc.): landed on m-i, passed tests and will merge to m-c soon
Risk to taking this patch (and alternatives if risky): should be low, at least low enough for aurora
String or IDL/UUID changes made by this patch: none
Attachment #8378343 -
Flags: approval-mozilla-aurora?
Comment 8•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Updated•11 years ago
|
status-firefox30:
--- → fixed
Updated•11 years ago
|
Attachment #8378343 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•11 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•